将三大歌词源返回的逐字歌词统一为 LYS 格式
- 将原有 YRC、QRC、KRC 平台专属逐字歌词格式统一转换为 LYS，方便前端解析
- 优化部分音乐平台翻译歌词、LRC 歌词获取流程，提升处理效率